# genomeforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_COVERAGE.md  HANDOFF_ZERO_MEMORY.md  Makefile  README.md  SNAPGENE_FEATURE_COVERAGE.md  canonical_schema.py  genomeforge_toolkit.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  real_world_functional_test.py  smoke_test.py  snapgene_like.py  web_ui.py
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  workflow_feedback.yml
.github/workflows/: ci.yml
backend/: __init__.py  analysis_api.py  assembly_api.py  biology_api.py  core_api.py  design_api.py  project_api.py  search_reference_api.py  trace_api.py
bio/: __init__.py  crispr_design.py  primer_specificity.py  project_diff.py  trace_tools.py
collab/: __init__.py  review.py  store.py
compat/: __init__.py  ab1_format.py  dna_format.py
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  INSTALL.md  MODERNIZATION_PLAN.md  P0_IMPLEMENTATION_NOTES.md  P1_IMPLEMENTATION_NOTES.md  P2_IMPLEMENTATION_NOTES.md  README.md  SPRINT_PLAN_12W.md  USER_GUIDE.md  build_tutorial_pdf.py  validate_docs.py
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md
docs/test_reports/: REAL_WORLD_FUNCTIONAL_TEST_REPORT.md  REAL_WORLD_FUNCTIONAL_TEST_RESULT.json
docs/tutorial/: capture_tutorial_screenshots.js  generate_tutorial.py  (+1 more)
e2e/: webui.spec.js
tests/: test_backend_domains.py  test_core_algorithms.py
webui/: index.html  styles.css
(+80 files in other folders)
